launchbear (2.3.0) UNRELEASED; urgency=medium

  * Backends: XDG: Ignore XScreenSaver files.

 -- P. S. Clarke <debs@pscl4rke.net>  Sun, 12 Sep 2021 16:55:45 +0100

launchbear (2.2.1) unstable; urgency=medium

  * Backends: XDG: Fix to be more resilient.

 -- P. S. Clarke <debs@pscl4rke.net>  Mon, 06 Jul 2020 19:39:24 +0100

launchbear (2.2.0) unstable; urgency=medium

  * Backends: Add linkbear and remove srprompt.

 -- P. S. Clarke <debs@pscl4rke.net>  Wed, 22 Apr 2020 18:18:39 +0100

launchbear (2.1.0) unstable; urgency=medium

  * Wizard: Detect if symlinks already exist.
  * Wizard: Only delete cache file if necessary.
  * Wizard: Add 'p' option to preview backend output.

 -- P. S. Clarke <debs@pscl4rke.net>  Wed, 25 Mar 2020 08:33:59 +0000

launchbear (2.0.0) unstable; urgency=medium

  * Switch from Python 2 to Python 3.

 -- P. S. Clarke <debs@pscl4rke.net>  Sat, 09 Nov 2019 14:50:38 +0000

launchbear (1.0.4) unstable; urgency=medium

  * Use HTTPS for home page URLs.
  * Add .py file extensions.
  * Introduce a placeholder test suite.
  * Fix bug with corrupted cache file.

 -- P. S. Clarke <debs@pscl4rke.net>  Sat, 09 Nov 2019 10:12:13 +0000

launchbear (1.0.3) unstable; urgency=medium

  * Fix python2 dependency.

 -- P. S. Clarke <debs@pscl4rke.net>  Sat, 10 Mar 2018 18:08:52 +0000

launchbear (1.0.2) unstable; urgency=medium

  * Add README and license with the GPLv3.
  * Add manpages for the binaries.

 -- P. S. Clarke <debs@pscl4rke.net>  Sat, 10 Mar 2018 17:38:23 +0000

launchbear (1.0.1) unstable; urgency=medium

  * Fix dependency from python2 to python2.7

 -- P. S. Clarke <debs@pscl4rke.net>  Sat, 06 Jan 2018 20:30:09 +0000

launchbear (1.0.0) unstable; urgency=medium

  * Initial Release.

 -- P. S. Clarke <debs@pscl4rke.net>  Sat, 06 Jan 2018 20:18:33 +0000